--- a/Impact_model_method/1cyanoHAB_season.Rmd
+++ b/Impact_model_method/1cyanoHAB_season.Rmd
@@ -51,7 +51,7 @@ Me_cyanoRB<- phyto %>%
 
 Cyanobacteria data defined and filtered.
 
-b) defining and filtering the Secchi depth data...
+b) reformatting and filtering the Secchi depth data...
 
 ```{r}
 Me_Secchi<- Secchi %>%
@@ -66,10 +66,10 @@ Secchi depth data defined and filtered.
 c) merging the data...
 ```{r}
 ### merging the two data files ###
-fig2_data<- merge(Me_cyanoRB, Me_Secchi, by=c("sampledate"),
+SIfig4_data<- merge(Me_cyanoRB, Me_Secchi, by=c("sampledate"),
                        all=TRUE)  #merges data frames and keeps all records 
 ### reformatting dates ###
-fig2_data<- fig2_data %>%
+SIfig4_data<- SIfig4_data %>%
   mutate(Yr=as.numeric(format(sampledate, "%Y")), #renames field
          daynum=as.numeric(format(sampledate, "%j"))) #adds field with day
 ```
@@ -78,36 +78,41 @@ Data merged.
 
 # Step 3. View the data available:
 
-a)  plotting Secchi depth and cyanobacteria relative biovolume to get cyanoHAB season...
+a)  plotting Secchi depth ...
 
 ```{r}
 ### plot Secchi depth by day of year ###
-a<- ggplot(data=fig2_data, aes(x=daynum, y=SD_m)) + #plots SD across day
+SIfig4a<- ggplot(data=SIfig4_data, aes(x=daynum, y=SD_m)) + #plots SD across day
   geom_point() + #plots observations as points
   theme_classic(base_size=12) +
   geom_smooth() + #adds regression curve
-  labs(x="Day of year", y="Secchi depth (m)") +
+  labs(x="Day of year", y="Secchi depth (m)", title="a)") +
   annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
            xmin=-Inf, xmax=196, ymin=0, ymax=Inf) +#shadow box highlights CyanoHAB season
   annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
            xmin=252, xmax=Inf, ymin=0, ymax=Inf)  #shadow box highlights CyanoHAB season
+```
 
+Plot generated.
+
+b) plotting cyanobacteria relative biovolume...
+
+```{r}
 ### plot cyanobacteria relative biovolume by day of year ###
-b <- ggplot(data=fig2_data, aes(x=daynum, y=cyano_relbiovol)) + #plots cyano RB across day
+SIfig4b <- ggplot(data=SIfig4_data, aes(x=daynum, y=cyano_relbiovol)) + #plots cyano RB across day
   geom_point() + #plots observations as points
   theme_classic(base_size=12) +
   geom_smooth() + #adds regression curve
   labs(x="Day of year", 
-       y="Cyanobacteria relative biovolume 
-       (as % total phytoplankton biovolume)") +
+       y="Cyanobacteria biovolume (% total)", title="b)") +
   annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
            xmin=-Inf, xmax=196, ymin=0, ymax=Inf) +#shadow box highlights CyanoHAB season
   annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
            xmin=252, xmax=Inf, ymin=0, ymax=Inf)  #shadow box highlights CyanoHAB season
-fig2<- ggarrange(a, b, nrow=2, ncol=1) #plot figures together
-fig2 #print figure
-ggsave(fig2, file="Products/Figure2_color.png") #saves plot to Products folder
-write.csv(fig2_data, file="Products/Figure2_data.csv") #save data used to make figure
+SIfig4<- ggarrange(SIfig4a, SIfig4b, nrow=2, ncol=1) #plot figures together
+SIfig4 #print figure
+ggsave(SIfig4, file="Products/SI_figures/Figure4_color.png") #saves plot to Products folder
+write.csv(SIfig4_data, file="Products/SI_figures/Figure4_data.csv") #save data used to make figure
 ```
 
-Data plotted.
+Graphs displayed to get cyanoHAB season.
