--- a/Impact_model_method/2cyanoHAB_severity.Rmd
+++ b/Impact_model_method/2cyanoHAB_severity.Rmd
@@ -7,8 +7,8 @@ editor_options:
   chunk_output_type: console
 ---
 
-The following text and code documents how algal data was processed and analyzed.
-Data was also converted to time series.
+The purpose of this program is to display cyanoHAB severity across time and how cyanoHAB severity will be defined in the model. Two variables are needed for this program, chlorophyll-a concentration and cyanobacteria cell density.
+
 
 # Step 1. Load dependent packages and data:
 
@@ -87,24 +87,23 @@ CD calculated.
 a) plotting Chl-a data available...
 
 ```{r}
-### filter data to cyanoHAB season ###
-fig3a_data<- Me_Chl %>%
-  filter(daynum>= 189 & daynum<= 259) #day num +- 7 days
-
 ### plot cyanoHAB severity as chl-a over time ###
-SI_fig3a<- ggplot(data=fig3a_data, aes(x=daynum, y=Chla_ugL)) + #plots Chl-a across date
+SIfig19a_data<- Me_Chl %>%
+  filter(daynum>= 189 & daynum<= 259)
+
+SIfig19a<- ggplot(data=SIfig19a_data, 
+                  aes(x=daynum, y=Chla_ugL)) + #plots Chl-a across date
   geom_point() + #adds points at observations
   geom_line() + #adds lines between 
   facet_wrap(~Yr) +
   theme_classic(base_size=12) +
   labs(x="Day of Year", y="Total Chl-a (ug/L)", title="a)") +
-  annotate('rect', xmin=min(fig3a_data$daynum), xmax=max(fig3a_data$daynum),
+  annotate('rect', xmin=min(SIfig19a_data$daynum), xmax=max(SIfig19a_data$daynum),
            ymin=0, ymax=12, alpha=.2, fill='green') + #low/no CyanoHAB
-  annotate('rect', xmin=min(fig3a_data$daynum), xmax=max(fig3a_data$daynum),
+  annotate('rect', xmin=min(SIfig19a_data$daynum), xmax=max(SIfig19a_data$daynum),
            ymin=12, ymax=50, alpha=.2, fill='orange')+ #moderate CyanoHAB
-  annotate('rect', xmin=min(fig3a_data$daynum), xmax=max(fig3a_data$daynum),
+  annotate('rect', xmin=min(SIfig19a_data$daynum), xmax=max(SIfig19a_data$daynum),
            ymin=50, ymax=Inf, alpha=.2, fill='red') #severe CyanoHAB
-SI_fig3a
 ```
 
 Chl-a data plotted. 
@@ -112,44 +111,47 @@ Chl-a data plotted.
 b) Plotting CD data available...
 
 ```{r}
-### filter data to cyanoHAB season ###
-fig3b_data<- Me_cyano %>%
-  filter(daynum>= 189 & daynum<= 259) #day num +- 7 days
-
 ### plot cyanoHAB severity as CD over time ###
-SI_fig3b<- ggplot(data=fig3b_data, aes(x=daynum, y=CD_cellsmL))+
+SIfig19b_data<- Me_cyano %>%
+  filter(daynum>= 189 & daynum<= 259)
+
+SIfig19b<- ggplot(data=SIfig19b_data,
+                  aes(x=daynum, y=CD_cellsmL))+
   geom_point() +  #point plot 
   geom_line() + #lines between points
   facet_wrap(~Yr) + #by year
   theme_classic(base_size=12)+
-  annotate('rect', xmin=min(fig3b_data$daynum), xmax=max(fig3b_data$daynum),
+  annotate('rect', xmin=min(SIfig19b_data$daynum), xmax=max(SIfig19b_data$daynum),
            ymin=0, ymax=20000, alpha=.2, fill='green') + #low/no CyanoHAB
-  annotate('rect', xmin=min(fig3b_data$daynum), xmax=max(fig3b_data$daynum),
+  annotate('rect', xmin=min(SIfig19b_data$daynum), xmax=max(SIfig19b_data$daynum),
            ymin=20000, ymax=100000, alpha=.2, fill='orange')+ #moderate CyanoHAB
-  annotate('rect', xmin=min(fig3b_data$daynum), xmax=max(fig3b_data$daynum),
+  annotate('rect', xmin=min(SIfig19b_data$daynum), xmax=max(SIfig19b_data$daynum),
            ymin=100000, ymax=Inf, alpha=.2, fill='red') +#severe CyanoHAB
   labs(x="Day of Year", y="Cyanobacteria Density (cells/mL)", title="b)")
-SI_fig3b #print image
 ```
 
 
 c) plotting chla and CD together...
 
 ```{r}
-SI_fig3<- ggarrange(SI_fig3a, SI_fig3b, ncol=2, nrow=1, widths=c(0.5, 0.5))
-SI_fig3
-ggsave("Products/SI_figures/Figure3_color.png") #saves plot to Products folder
+SIfig19<- ggarrange(SIfig19a, SIfig19b, ncol=2, nrow=1, widths=c(0.5, 0.5))
+SIfig19
+ggsave("Products/SI_figures/Figure19_color.png") #saves plot to Products folder
 ```
 
 Chla and CD data plotted. 
 
-d) merging the data files...
+d) merging the data files and save...
+
 ```{r}
 ### merge data files ###
 Chla_CD<- merge(Me_Chl, Me_cyano, by=c("sampledate", "Yr", "daynum"), all=TRUE) 
+
+### save the data file as cleaned observations ###
+write.csv(Chla_CD, file="Cleaned_data/observed_cyanoHABs.csv")
 ```
 
-Data files merged.
+Data files merged and saved.
 
 # Step 4. Bin observations into expected frequencies:
 
@@ -178,8 +180,8 @@ Defined expected observation frequency.
 b) binning observed dates into expected dates...
 
 ```{r}
-Chla_CD <- Chla_CD  %>%
-  filter(daynum>= 189 & daynum<= 259) %>% #filter for cyanoHAB season
+Chla_CD2 <- Chla_CD  %>%
+  filter(daynum>= 189 & daynum<= 259) %>% #filter for cyanoHAB season +- 7 days
   mutate(daynum_bin=
          ifelse(daynum<(daynum_bins[2]-7), #if observation is <= bin 2 min
                 daynum_bins[1], #yes returns bin 1
@@ -194,18 +196,19 @@ Chla_CD <- Chla_CD  %>%
                             daynum_bins[4], #yes returns bin 4
                             daynum_bins[5])))))#no returns bin 5
                      
-Chla_CD<- Chla_CD %>% 
-  filter(!duplicated(cbind(Yr, daynum_bin), fromLast = TRUE))  #remove first duplicate
+Chla_CD2$daynum_bin[11]<- 210 #day nums shifted
+Chla_CD2$daynum_bin[12]<- 224 #day nums shifted
+Chla_CD2$daynum_bin[13]<- 238 #day nums shifted
+Chla_CD2$daynum_bin[14]<- 252 #day nums shifted
 ```
 
 Observed dates assigned to closest expected dates.
 
 c) merging the data frames with expected bins...
-Note, R only merges two data frames at one time.
 
 ```{r}
 cyanoHAB<- merge(cyanoHAB_bins, #x data frame
-                 Chla_CD, #y data frame
+                 Chla_CD2, #y data frame
                  by=c("Yr","daynum_bin"),
                  all.x=TRUE) #define the key fields
 ```
@@ -223,10 +226,10 @@ summary(cyanoHAB)
 
 3 NAs identified.
 
-b) if NAs randomly missing, replacing with annual mean...
+b) if NAs randomly missing and rare, replacing with mean...
 
 ```{r}
-### calculate annual means ###
+### calculate annual means for cyanoHAB season ###
 yr_mean<- cyanoHAB %>%
   group_by(Yr) %>%
   summarize(avg_Chla=mean(Chla_ugL, na.rm=TRUE),
@@ -243,73 +246,16 @@ cyanoHAB<- cyanoHAB %>%
   ungroup()
 
 ### check that missing values replaced with means ###
-summary(cyanoHAB$Chla_ugL)
-summary(cyanoHAB$CD_cellsmL)
+summary(cyanoHAB)
 ```
 
 NAs replaced.
 
-# Step 6. Interpolate weekly response values:
-
-a) define expected frequencies...
-
-```{r}
-### determine expected observation frequencies ###
-week_bins<- seq(from=196, #define date start of CyanoHAB season
-                  to=252, #define date end of CyanoHAB season
-                  by=7) #creates a sequence every week 
-week_bins #prints the expected observation dates of data
-
-### create data frame with the frequencies wanted ###
-week_bins<- data.frame(Yr=rep(Yr, each=9),week_bin=rep(week_bins, times=6))
-```
-
-Expected weekly frequencies defined.
-
-b) merging data to expected frequencies... 
-
-```{r}
-### merge observations with data frame of frequencies ###
-cyanoHAB2<- merge(week_bins, cyanoHAB, by.x=c("Yr","week_bin"), 
-                      by.y=c("Yr", "daynum_bin"), all=TRUE) 
-```
-
-Weekly frequencies added to observations.
-
-c) interpolating missing daily values...
-
-```{r}
-### linearly interpolate the missing values ###
-cyanoHAB_approx<- cyanoHAB2 %>%  
-  group_by(Yr) %>%
-  mutate(Chla_ugL=na.approx(Chla_ugL, na.rm=F, rule=2),
-         CD_cellsmL=na.approx(CD_cellsmL, na.rm=F, rule=2)) %>% #interpolates where NA
-  ungroup() 
-```
-
-Daily observations interpolated.
-
-# Step 7. Add fields with lagged values:
-
-```{r}
-cyanoHAB_approx<- cyanoHAB_approx %>%
-  mutate(Chla_ugL_k7=lag(Chla_ugL, n=1), 
-         CD_cellsmL_k7=lag(CD_cellsmL, n=1),
-         Chla_ugL_k14=lag(Chla_ugL, n=2), 
-         CD_cellsmL_k14=lag(CD_cellsmL, n=2),
-         Chla_ugL_k21=lag(Chla_ugL, n=3), 
-         CD_cellsmL_k21=lag(CD_cellsmL, n=3),
-         Chla_ugL_k28=lag(Chla_ugL, n=4), 
-         CD_cellsmL_k28=lag(CD_cellsmL, n=4)) 
-```
-
-Field with lagged values added.
-
-# Step 8. Save as new data files:
+# Step 6. Save as new data files:
 
 ```{r}
 ### save the new Chla data file ###
-write.csv(cyanoHAB_approx, file="Cleaned_data/cyanoHAB_severity.csv")
+write.csv(cyanoHAB, file="Cleaned_data/cyanoHAB_severity.csv")
 ```
 
 # Step 9: Make 3D graphs of response variables for entire year:
@@ -345,7 +291,7 @@ Chla_interp<- Chla_interp %>%
          ) %>%
   filter(Yr>=2013 & Yr<=2018) #filter for study period
 
-SI_fig4a<- plot_ly(x=Chla_interp$Yr, 
+SIfig20a<- plot_ly(x=Chla_interp$Yr, 
   y=Chla_interp$daynum, 
   z=Chla_interp$Chla_ugL, 
   type="scatter3d", mode="markers",
@@ -353,7 +299,7 @@ SI_fig4a<- plot_ly(x=Chla_interp$Yr,
   layout(scene=list(xaxis=list(title="Year"),
          yaxis=list(title="Day of Year"),
          zaxis=list(title="Chlorophyll-a (ug/L)")))
-SI_fig4a #prints the plot
+SIfig20a #prints the plot
 #save plot mannually
 ```
 
@@ -391,7 +337,7 @@ CD_interp<- CD_interp %>%
          ) %>%
   filter(Yr>=2013 & Yr<=2018) #filter for study period
 
-SI_fig4b<- plot_ly(x=CD_interp$Yr, 
+SIfig20b<- plot_ly(x=CD_interp$Yr, 
   y=CD_interp$daynum, 
   z=CD_interp$CD_cellsmL, 
   type="scatter3d", mode="markers",
@@ -399,7 +345,7 @@ SI_fig4b<- plot_ly(x=CD_interp$Yr,
   layout(scene=list(xaxis=list(title="Year"),
          yaxis=list(title="Day of Year"),
          zaxis=list(title="Cyanobacteria Density (cells/mL)")))
-SI_fig4b #prints the figure
+SIfig20b #prints the figure
 #save manually
 ```
 
